more descriptive caption

--- a/blog/loyal_commander_loyal_round_2_fig.tex
+++ b/blog/loyal_commander_loyal_round_2_fig.tex
@@ -137,6 +137,6 @@ In the second round, each lieutenant shares with all other lieutenants what they
 \end{tabular}
 \par\vspace{0.3em}
 {\scriptsize
-After Round 2, each loyal lieutenant can determine the consensus by taking a majority vote of all reported values. Despite the traitors contradicting the commander's message, all loyal lieutenants reach the same conclusion: Attack (A), which matches the loyal commander's original order.
+After Round 2, each loyal lieutenant can determine the consensus by taking a majority vote of all reported values. Despite the traitors ($\gen{1}$ \& $\gen{4}$) contradicting the commander's ($\gen{0}$) message, all loyal lieutenants ($\gen{2}$, $\gen{3}$, $\gen{5}$ \& $\gen{6}$) reach the same conclusion: Attack (A), which matches the original loyal commander's ($\gen{0}$) original order (\cmdA).
 }
 \end{center}
